# Universal-AI-Documentation-System-Design-Companion

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  todo.md
.github/workflows/: docker-validation.yml  main.yml
backend/: Dockerfile  README.md  alembic.ini  debug_alembic.py  debug_models.py  pyproject.toml  pytest.ini  requirements.txt  temp_test_file.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 2025_06_04_2335-5aa6a8646259_initial_schema.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: jobs.py
backend/app/core/: config.py  logging_config.py
backend/app/crud/: __init__.py  file.py  job.py
backend/app/db/: models.py  session.py
backend/app/schemas/: __init__.py  file.py  job.py
backend/app/services/: file_handler.py  job_orchestrator.py
backend/app/services/ai_agents/: __init__.py  analyzer_agent.py  cleaner_agent.py  extractor_agent.py
backend/docs/: migrations.md
backend/tests/: conftest.py
backend/tests/agents/: __init__.py  test_agents_behavior.py
backend/tests/api/: __init__.py  test_jobs_api.py
backend/tests/integration/: __init__.py  test_file_processing_pipeline.py
backend/tests/unit/: __init__.py  test_analyzer_agent_utils.py  test_cleaner_agent_utils.py  test_extractor_agent_utils.py  test_file_handler.py
docs/: architecture.md  system-overview.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx
prompts/: analyzer.md  cleaner.md  extractor.md
(+17 files in other folders)
